--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  flutter_speed_dial: ^3.0.5
   google_fonts: ^2.0.0
 
 dev_dependencies:
